--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- <nav>bar start -->
    <div class="navbar">
    <nav >
-    <a href="">  <img   src="/img/covidbb (1).png" alt="" class="logo">
+    <a href="">  <img   src="img/covidbb (1).png" alt="" class="logo">
       <ul  class="nav-ul">
          <li class="nav-li" > <a href="http://">  Home</a></li>
          <li  class="nav-li" ><a href="http://"> Our Mission</a></li>
@@ -34,7 +34,7 @@
 
   <button class="get">Get Appointment</button>
 </div>
-<img src="/img/vaccine1 (1).png"  class="vaccine1" alt="">
+<img src="img/vaccine1 (1).png"  class="vaccine1" alt="">
 
 </div>
 
@@ -45,7 +45,7 @@
 <div class="cases">
 
 
-  <img src="/img/chrt (1).png" class="chart" alt="">
+  <img src="img/chrt (1).png" class="chart" alt="">
 
   <div class="percent">
     <h3 class="vac1">Vaccined</h3>
@@ -65,7 +65,7 @@
 <div class="step1">
   <div class="a">
 <p>Step 1</p> 
-<img src="/img/step1 (1).png" alt="" class="a1">
+<img src="img/step1 (1).png" alt="" class="a1">
 <p class="b1"> Book an Appointment on COVID19 and Walk into any Vaccination Center</p>
 
  </div>
@@ -75,7 +75,7 @@
 <div class="step2">
   <div class="b">
     <p>Step 2</p> 
-    <img src="/img/step2.png" alt="" class="a2">
+    <img src="img/step2.png" alt="" class="a2">
     <p class="b2"> Get your Vaccination Safely at the Time of Your Appointment</p>
 
      </div>
@@ -85,7 +85,7 @@
 <div class="step3">
   <div class="c">
     <p>Step 3</p> 
-    <img src="/img/step3 (1).png" alt="" class="a3">
+    <img src="img/step3 (1).png" alt="" class="a3">
     <p class="b3"> Follow the Instructions Given by the Doctor and Be Safe</p>
 
      </div>
@@ -175,9 +175,9 @@
     </div>
  
         <ul  class="ul1" >
-            <li class="li1" > <a href="#" >  <img  class="ln1" src="/img/fb.png" alt=""></a> </li>
-            <li class="li1" > <a  href="#" >  <img   class="ln2" src="/img/google.png" alt=""></a></li>
-            <li class="li1" ><a  href="#" > <img  class="ln3" src="/img/linkedin.png" alt=""></a></li>
+            <li class="li1" > <a href="#" >  <img  class="ln1" src="img/fb.png" alt=""></a> </li>
+            <li class="li1" > <a  href="#" >  <img   class="ln2" src="img/google.png" alt=""></a></li>
+            <li class="li1" ><a  href="#" > <img  class="ln3" src="img/linkedin.png" alt=""></a></li>
          </ul>  
      
 
